--- a/styles/launchpad.css
+++ b/styles/launchpad.css
@@ -264,4 +264,68 @@ nav h1 {
     margin-top: 20px;
     border-radius: 50px;
 }
+
 /* form section style */
+.contact {
+    padding: 80px 20px;
+}
+
+.contact-content {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    gap: 30px;
+    max-width: 1000px;
+    margin: 0 auto;
+}
+
+.contact-title {
+    width: 40%;
+    display: table;
+}
+
+.contact-title h2 {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: left;
+    font-size: 90px;
+    font-weight: bold;
+    line-height: 120%;
+    height: 100%;
+    margin: 0;
+}
+
+.contact-box {
+    width: 60%;
+    max-width: 600px;
+    margin: 70px 100px;
+    padding: 40px 30px;
+    border-radius: 12px;
+}
+
+/* form part style */
+form {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+}
+
+label {
+    font-weight: 500;
+    line-height: 120%;
+    font-size: 18px;
+}
+
+input,
+textarea {
+    padding: 20px 40px;
+    font-size: 20px;
+    border-radius: 10px;
+    border: 1px solid #cbd5e1;
+}
